[derby] Update to 10.12.1.1 and add security manager