@@ -81,7 +81,7 @@
     <dependency>
       <groupId>org.apache.derby</groupId>
       <artifactId>derby</artifactId>
-      <version>10.11.1.1</version>
+      <version>10.12.1.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -166,6 +166,11 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
+          <argLine>
+            -DtargetDir=${project.build.directory}
+            -Djava.security.manager=default
+            -Djava.security.policy=${project.basedir}/src/test/java/databases/blog/server.policy
+          </argLine>
           <systemProperties>
             <property>
               <name>derby.stream.error.file</name>
